--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "tailwindcss": "^1.1.4"
+        "tailwindcss": "^1.1.4",
+        "vue2-google-maps": "^0.10.7"
     }
 }
