--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     },
     "dependencies": {
         "qs": "^6.9.1",
-        "tailwindcss": "^1.1.4",
-        "vuelidate": "^0.7.5"
+        "tailwindcss": "^1.1.4"
     }
 }
